kubernetes/dev/istio-ingress/longhorn-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: longhorn-vs
  namespace: istio-ingress
spec:
  hosts:
  - "longhorn-istio.dev.nmoura.pt"
  gateways:
  - longhorn-gateway
  http:
  # Optional: Add a redirect from HTTP to HTTPS
  - match:
    - uri:
        prefix: /
    redirect:
      scheme: https
      authority: longhorn-istio.dev.nmoura.pt
  - route:
    - destination:
        host: longhorn-frontend.longhorn-system.svc.cluster.local
        port:
          number: 80
