kubernetes/dev/istio-ingress/uptime-kuma-vservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: uptime-kuma-vs
  namespace: istio-ingress
spec:
  hosts:
  - "istio.dev.nmoura.pt"
  gateways:
  - uptime-kuma-gateway
  http:
  - route:
    - destination:
        host: uptime-kuma.uptime-kuma.svc.cluster.local
        port:
          number: 3001
