kubernetes/dev/istio-ingress/longhorn-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: longhorn-mtls-authz
  namespace: istio-ingress
spec:
  selector:
    matchLabels:
      istio: gateway
  action: ALLOW
  rules:
  - from:
    - source:
        # This will allow requests that are mTLS authenticated
        principals: ["*"]
    to:
    - operation:
        hosts:
        - "longhorn-istio.dev.nmoura.pt"
        ports:
        - "443"
